Closed Bug 640079 Opened 15 years ago Closed 15 years ago

TI: "Assertion failure: Unknown id," with E4X, evalcx

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Unassigned)

References

Details

(Keywords: assertion, testcase, Whiteboard: fixed-in-jaegermonkey)

Attachments

(1 file)

Attached file stack
eval("\ x = evalcx('split');\ evalcx(\"for(e in <x/>){}\" ,x)\ ") asserts js debug shell on JM changeset adc45b0a01c8 at Assertion failure: Unknown id, with -n.
Did not handle the special DEFAULT_NAMESPACE_ID when converting jsids to their canonical inference form in MakeTypeId. http://hg.mozilla.org/projects/jaegermonkey/rev/60670ecd2133
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
Automatically extracted testcase for this bug was committed: https://hg.mozilla.org/mozilla-central/rev/efaf8960a929
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: