[INFER] Handle DEFAULT_NAMESPACE_ID in MakeTypeId, bug 640079.