js/src/jit-test/tests/basic/bug640079.js
@@ -1,0 +1,4 @@
+eval("\
+  x = evalcx('split');\
+  evalcx(\"for(e in <x/>){}\" ,x)\
+")
